IM-client 0.10

    * Initial version

IM-client 0.20

    * Changes in the RADL code

IM-client 0.21

    * Changes in the examples to be correct with the new RADL syntax

IM-client 1.0.0

    * Minor bug fixes

IM-client 1.1.0

    * Minor bug fixes
    * Changes to be compatible with IM version 1.1.0

IM-client 1.2.0

    * Add support to parametric RADLs (@input.[param]@ values)